--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
+
+.preview-box-shadow{
+    box-shadow: 0 8px 6px 4px rgba(0, 0, 0, 0.1), 0 4px 6px 4px rgba(0, 0, 0, 0.08);
+}
