--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,57 @@
 @tailwind utilities;
 
 .scrollbar-hide:-webkit-scrollbar {
-    display: none;
-    }
+  display: none;
+}
 /* For IE, Edge and Firefox */
 .scrollbar-hide {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
-.preview-box-shadow{
-    box-shadow: 0 8px 6px 4px rgba(0, 0, 0, 0.1), 0 4px 6px 4px rgba(0, 0, 0, 0.08);
+.preview-box-shadow {
+  box-shadow: 0 8px 6px 4px rgba(0, 0, 0, 0.1),
+    0 4px 6px 4px rgba(0, 0, 0, 0.08);
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 115vh;
+  background: black;
+  z-index: 60;
+}
+
+.loader {
+  border: 8px solid rgba(255, 255, 255, 0.3);
+  border-top: 8px solid #e50914;
+  border-radius: 50%;
+  width: 69px;
+  height: 69px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 20px;
 }
